# jrg94

./: README.md  pyproject.toml  readme.py  requirements.txt
.github/workflows/: deploy.yml
