[project]
name = "jrg94-readme"
description = "The automation script for my README."
version = "1.1.0"
readme = "README.md"
license = "MIT"

authors = [
    {name="Jeremy Grifski", email="jeremy.grifski@therenegadecoder.com"}
]

requires-python = "<4.0,>=3.9"
dependencies = [
    "snakemd (>=2.3.0,<3.0.0)", 
    "feedparser (>=6.0.11,<7.0.0)", 
    "subete (>=0.20.0,<0.21.0)"
]

[project.urls]
homepage = "https://jeremygrifski.com"
repository = "https://github.com/jrg94/jrg94"

# Build system settings
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
